kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fooocus-api
  namespace: foocus-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: foocus-api.secure
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fooocus-api
                port:
                  number: 80
  # Uncomment the following lines if you want to configure TLS
  # tls:
  #   - hosts:
  #       - foocus-api.secure
  #     secretName: fooocus-api-tls
